# aoc-2022

./: .gitignore  README.md  pyproject.toml  setup.cfg
aoc_2022/day1/: README.md  calorie_counter.py  main.py  puzzle_input.py
aoc_2022/day2/: main.py  puzzle_input.py  rps_score.py
tests/day1/: test_calorie.py
tests/day2/: test_rps.py
