[tool.poetry]
name = "aoc-2022"
version = "0.1.0"
description = ""
authors = ["Adit RP <aditya.putra@pitik.id>"]
readme = "README.md"
packages = [{include = "aoc_2022"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
mypy = "^0.991"
pre-commit = "^2.20.0"
flake8 = "^6.0.0"
python-kacl = "^0.2.30"
pyupgrade = "^3.3.0"
isort = "^5.10.1"
autoflake = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
